--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ a:hover {
                 <td class="tg-0j0f">   <br>Closing   </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>TBA   </td>
+                <td class="tg-0j0f">   <br>6:00PM   </td>
                 <td class="tg-0j0f">   <br>Mixed Sweat at Blow Me Down   </td>
               </tr>
             </tbody></table>
@@ -222,18 +222,36 @@ a:hover {
                 <td class="tg-0j0f">   <br> Grand Entry </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>2:00-4:00PM                   </td>
+                <td class="tg-0j0f">   <br>2:00-3:45PM                   </td>
                 <td class="tg-0j0f">   <br>Community Drumming </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>4:00PM                     </td>
-                <td class="tg-0j0f">   <br> Retiring of the Flags <br><br> Giveaway and Goodbye   </td>
+                <td class="tg-0j0f">   <br>3:45PM                     </td>
+                <td class="tg-0j0f">   <br> Retiring of the Flags <br>
+              </tr>
+              <tr>
+                <td class="tg-0j0f">   <br>4:00PM                   </td>
+                <td class="tg-0j0f">   <br>Giveaway and Goodbye </td>
               </tr>
             </tbody></table>
             <br>
+            <br>
             <p style="text-align: left; font-size:18px; margin-left:4%"><em><u>Youth Activities</u></em></p>
             <br>
-            <p style="text-align: left; margin-left:3%">TBA</p>
+            <table class="tg" style="margin-left: 3%;"><tbody>
+              <tr>
+                <td class="tg-0j0f">   <br>1:30-3:45PM                  </td>
+                <td class="tg-0j0f">   <br>Petroglyph Face Paint <br><br> <em>Location: Parks Canada Booth</em></td>
+              </tr>
+              <tr>
+                <td class="tg-0j0f">   <br>2:00-2:30PM                  </td>
+                <td class="tg-0j0f">   <br>Story Telling with Judy Falle <br><br> <em>Location: Youth Tent</em></td>
+              </tr>
+              <tr>
+                <td class="tg-0j0f">   <br>2:30-3:30PM                  </td>
+                <td class="tg-0j0f">   <br>Craft: Talking Stick   <br><br> <em>Location: Youth Tent</em>  </td>
+              </tr>
+            </tbody></table>
             </div>
     </section>
     <section id="about">
