--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@ a:hover {
                 <td class="tg-0j0f">   <br>Panel Discussion: <em>‘Preserving our Past: Indigenous leaders on history and truth in Ktaqmkuk’  </em> </td>
               </tr>
               <tr>
+                <td class="tg-0j0f">   <br>1:30PM-3:00PM                    </td>
+                <td class="tg-0j0f">   <br>Youth Activities (in AS2036) </td>
+              </tr>
+              <tr>
                 <td class="tg-0j0f">   <br>3:00-4:00PM                   </td>
                 <td class="tg-0j0f">   <br>Medicine Walk with Newfoundland Naturals   </td>
               </tr>
@@ -203,7 +207,7 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>    </td>
-                <td class="tg-0j0f">  <br>  Elder Calvin White <br> <br>Elder Odelle Pike <br> <br>QFN Chief Jenny Brake <br><br>AFN Chief Brendan Mitchell  <br><br>Hereditary Chief Stephen Augustine </td>
+                <td class="tg-0j0f">  <br>  Elder Calvin White <br> <br>Elder Odelle Pike <br> <br>Hereditary Chief Stephen Augustine <br><br>Mi'Kmaw Veteran Award </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:30AM-12:45PM                 </td>
@@ -241,7 +245,7 @@ a:hover {
             <table class="tg" style="margin-left: 3%;"><tbody>
               <tr>
                 <td class="tg-0j0f">   <br>1:30-3:45PM                  </td>
-                <td class="tg-0j0f">   <br>Petroglyph Face Paint <br><br> <em>Location: Parks Canada Booth</em></td>
+                <td class="tg-0j0f">   <br>Face Painting <br><br> <em>Location: Parks Canada Booth</em></td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>2:00-2:30PM                  </td>
@@ -294,6 +298,13 @@ a:hover {
                     <a style="color: #000;" href="images/mawiomiprogram.jpg">Download or print the schedule </a>                </p>
               </div>
           </div>
+          <div class="container container-left">
+            <div class="image" style="background-image:url('images/sponsorshand.png')"></div>
+            <div class="content">
+                <span>SPONSORS</span>
+                <p>
+                  <a style="color: #000;" href="sponsors.html">See a list of our sponsors</a>                     </p>
+            </div>
 
            <!-- <div class="container container-left">
               <div class="image" style="background-image:url('images/icon-team.jpeg')"></div>
