--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>1:30PM-3:00PM                    </td>
-                <td class="tg-0j0f">   <br>Youth Activities (in AS2036) </td>
+                <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
+                 <br>  &#8226 Book Reading by Mira Buckle 
+                 <br> <br>  &#8226 Crafts<br>
+                 </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>3:00-4:00PM                   </td>
