--- a/index.html
+++ b/index.html
@@ -176,13 +176,15 @@ a:hover {
               <tr>
                 <td class="tg-0j0f">   <br>1:00PM-3:00PM                    </td>
                 <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
-                 <br>  &#8226 Book Reading and Giveaway by Mira Buckle 
+                 <br>  &#8226 Book Reading with Mi’kmaq Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaq Youth Stories </em>
+ 
                  <br> <br>  &#8226 Crafts<br>
                  </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>1:30PM-3:00PM                    </td>
-                <td class="tg-0j0f">   <br>Panel Discussion: <em>‘Preserving our Past: Indigenous leaders on history and truth in Ktaqmkuk’  </em> </td>
+                <td class="tg-0j0f">   <br>Panel Discussion: <em>‘Preserving our Past: Indigenous Leaders on History and Truth in Ktaqmkuk’  </em> 
+                <br><br> Featuring: Chief Mi'sel Joe, Elder Calvin White, and Jerry Wetzell</td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>3:00-4:00PM                   </td>
@@ -240,6 +242,10 @@ a:hover {
               <tr>
                 <td class="tg-0j0f">   <br>2:00-3:45PM                   </td>
                 <td class="tg-0j0f">   <br>Community Drumming </td>
+              </tr>
+              <tr>
+                <td class="tg-0j0f">   <br>2:00-3:45PM                   </td>
+                <td class="tg-0j0f">   <br>Archery </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>3:45PM                     </td>
