--- a/sponsors.html
+++ b/sponsors.html
@@ -68,13 +68,14 @@ a.one:hover {color: #ff0d00;text-decoration: underline;}
                     <h2 style="text-align: center;">Sponsors and Partners</h2>
                     <br>
                     <br>
+                    <br>  &#8226 Grenfell Campus Indigenous Resource Centre<br>
                     <br>  &#8226 Sobeys <br>
                     <br>  &#8226 Dominion<br>
                     <br>  &#8226 Colemans<br>
                     <br>  &#8226 Tim Hortons <br>
                     <br>  &#8226 Canadian Heritage<br>
                     <br>  &#8226 Ulnooweg<br>
-                    <br>  &#8226 Grenfell Campus Indigenous Resource Centre<br>
+                    <br>  &#8226 Newfoundland Native Women's Association<br>
                     <br>  &#8226 Qalipu First Nation<br>
                     <br>  &#8226 Mi'Kmaw Cultural Foundation<br>
                     <br>  &#8226 Elmastukwek First Nation<br>
