--- a/venue.html
+++ b/venue.html
@@ -105,7 +105,7 @@ a.one:hover {color: #ff0d00;text-decoration: underline;}
                         <h3>Venue Map:</h3>
                         <br>
                         <br>
-                        <img src="images/mawiomimap.jpeg" alt="site map" style="object-fit: scale-down; max-width: 100%">
+                        <img src="images/mawiomimap.png" alt="site map" style="object-fit: scale-down; max-width: 100%">
                         <br>
                         <br>
                         </div>
