--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ a:hover {
               <tr>
                 <td class="tg-0j0f">   <br>1:00PM-3:00PM                    </td>
                 <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
-                 <br>  &#8226 Book Reading with Mi’kmaq Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaq Youth Stories </em>
+                 <br>  &#8226 Book Reading with Mi’kmaw Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaq Youth Stories </em>
  
                  <br> <br>  &#8226 Crafts<br>
                  </td>
@@ -184,10 +184,10 @@ a:hover {
               <tr>
                 <td class="tg-0j0f">   <br>1:30PM-3:00PM                    </td>
                 <td class="tg-0j0f">   <br>Panel Discussion: <em>‘Preserving our Past: Indigenous Leaders on History and Truth in Ktaqmkuk’  </em> 
-                <br><br> Featuring: Chief Mi'sel Joe, Elder Calvin White, and Jerry Wetzell</td>
+                <br><br> Featuring Elder Calvin White and Jerry Wetzell</td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>3:00-4:00PM                   </td>
+                <td class="tg-0j0f">   <br>3:00PM-4:00PM                   </td>
                 <td class="tg-0j0f">   <br>Medicine Walk with Newfoundland Naturals   </td>
               </tr>
               <tr>
@@ -225,14 +225,14 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>    </td>
-                <td class="tg-0j0f">  <br>  Elder Calvin White <br> <br>Elder Odelle Pike <br> <br>Hereditary Chief Stephen Augustine <br><br>Mi'Kmaw Veteran Award </td>
+                <td class="tg-0j0f">  <br>Elder Calvin White <br> <br>Elder Odelle Pike <br> <br>Hereditary Chief Stephen Augustine <br><br>Mi'kmaw Veteran Award </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:30AM-12:45PM                 </td>
                 <td class="tg-0j0f">   <br>Registration for Grand Entry Dancers   </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>11:00AM-11:30PM                 </td>
+                <td class="tg-0j0f">   <br>11:00AM-11:30AM                 </td>
                 <td class="tg-0j0f">   <br>Guided Nature Walk  </td>
               </tr>
               <tr>
@@ -241,19 +241,19 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>1:00PM                 </td>
-                <td class="tg-0j0f">   <br> Grand Entry </td>
+                <td class="tg-0j0f">   <br>Grand Entry </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>2:00-3:45PM                   </td>
+                <td class="tg-0j0f">   <br>2:00PM-3:45PM                   </td>
                 <td class="tg-0j0f">   <br>Community Drumming </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>2:00-3:45PM                   </td>
+                <td class="tg-0j0f">   <br>2:00PM-3:45PM                   </td>
                 <td class="tg-0j0f">   <br>Archery </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>3:45PM                     </td>
-                <td class="tg-0j0f">   <br> Retiring of the Flags <br>
+                <td class="tg-0j0f">   <br>Retiring of the Flags <br>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>4:00PM                   </td>
@@ -267,20 +267,25 @@ a:hover {
             <p style="text-align: left; font-size:18px; margin-left:4%"><em><u>Youth Activities</u></em></p>
             <br>
             <table class="tg" style="margin-left: 3%;"><tbody>
+
               <tr>
-                <td class="tg-0j0f">   <br>12:00-3:30PM                  </td>
+                <td class="tg-0j0f">   <br>11:00AM-11:30AM                 </td>
+                <td class="tg-0j0f">   <br>Guided Nature Walk  </td>
+              </tr>
+              <tr>
+                <td class="tg-0j0f">   <br>12:00PM-3:30PM                  </td>
                 <td class="tg-0j0f">   <br>Button Making, Scavenger Hunt, Language Games, and Colouring   <br><br> <em>Location: Youth Tent</em>  </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>12:00-3:45PM                  </td>
-                <td class="tg-0j0f">   <br>Face Painting <br><br> <em>Location: Parks Canada Booth</em></td>
+                <td class="tg-0j0f">   <br>12:00PM-3:45PM                  </td>
+                <td class="tg-0j0f">   <br>Airbrush Tattoos <br><br> <em>Location: Parks Canada Booth</em></td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>2:00-2:30PM                  </td>
-                <td class="tg-0j0f">   <br>Story Telling with Judy Falle: <em> Papa and His Drum </em> <br><br> <em>Location: Youth Tent</em></td>
+                <td class="tg-0j0f">   <br>2:00PM-2:30PM                  </td>
+                <td class="tg-0j0f">   <br>Story Telling with Judith M. Doucette: <em> Papa and His Drum </em> <br><br> <em>Location: Youth Tent</em></td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>2:30-3:30PM                  </td>
+                <td class="tg-0j0f">   <br>2:30PM-3:30PM                  </td>
                 <td class="tg-0j0f">   <br>Craft: Talking Stick   <br><br> <em>Location: Youth Tent</em>  </td>
               </tr>
              
