--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ a:hover {
               <tr>
                 <td class="tg-0j0f">   <br>1:00PM-3:00PM                    </td>
                 <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
-                 <br>  &#8226 Book Reading with Mi’kmaw Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaq Youth Stories </em>
+                 <br>  &#8226 Book Reading with Mi’kmaw Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaw Youth Stories </em>
  
                  <br> <br>  &#8226 Crafts<br>
                  </td>
