--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@ a:hover {
             <table class="tg" style="margin-left: 3%;"><tbody>
               <tr>
                 <td class="tg-0j0f">   <br>9:30AM-10:00AM                  </td>
-                <td class="tg-0j0f">   <br>Tea/Coffee   </td>
+                <td class="tg-0j0f">   <br>Tea/Coffee and Muffins  </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:00AM-12:00PM                </td>
                 <td class="tg-0j0f">   <br>Mawio'mi Commencement Event   </td>
+                <br>
+                 <br>  &#8226 Featuring Community Drumming and Singing of the Honour Song
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>    </td>
@@ -217,7 +219,7 @@ a:hover {
             <table class="tg" style="margin-left: 3%;"><tbody>
               <tr>
                 <td class="tg-0j0f">   <br>6:00AM-8:00AM                  </td>
-                <td class="tg-0j0f">   <br>Sunrise Ceremony   </td>
+                <td class="tg-0j0f">   <br>Sunrise Ceremony (<em>arrival for 5:30AM</em>)  </td>
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:00AM-11:15AM                </td>
