--- a/index.html
+++ b/index.html
@@ -156,14 +156,13 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:00AM-12:00PM                </td>
-                <td class="tg-0j0f">   <br>Mawio'mi Commencement Event   </td>
-                <br>
-                 <br>  &#8226 Featuring Community Drumming and Singing of the Honour Song
+                <td class="tg-0j0f">   <br>Mawio'mi Commencement Event  
+                  <br> <br> &#8226 Special Guest: Hereditary Chief Stephen Augustine 
+                  <br> <br>  &#8226 Featuring Community Drumming and Singing of the Honour Song  <br>
+                 </td>
+            
               </tr>
-              <tr>
-                <td class="tg-0j0f">   <br>    </td>
-                <td class="tg-0j0f">   <br>Special Guest: Hereditary Chief Stephen Augustine   </td>
-              </tr>
+             
               <tr>
                 <td class="tg-0j0f">   <br>11:00AM-12:00PM                    </td>
                 <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
