--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@ a:hover {
             <br>
             <table class="tg" style="margin-left: 3%;"><tbody>
               <tr>
-                <td class="tg-0j0f">   <br>9:30AM-10:00AM                  </td>
-                <td class="tg-0j0f">   <br>Tea/Coffee and Muffins  </td>
+                <td class="tg-0j0f">   <br>9:00AM-10:00AM                  </td>
+                <td class="tg-0j0f">   <br>Tea/Coffee and Muffins  <br> <br>  Drum Making Demonstration  </td>
+                   
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>10:00AM-12:00PM                </td>
@@ -221,7 +222,7 @@ a:hover {
                 <td class="tg-0j0f">   <br>Sunrise Ceremony (<em>arrival for 5:30AM</em>)  </td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>10:00AM-11:15AM                </td>
+                <td class="tg-0j0f">   <br>10:00AM-11:00AM                </td>
                 <td class="tg-0j0f">   <br>Welcoming Remarks and Prayer   </td>
               </tr>
               <tr>
