--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ a:hover {
               </tr>
               <tr>
                 <td class="tg-0j0f">   <br>6:00PM   </td>
-                <td class="tg-0j0f">   <br>Mixed Sweat at Blow Me Down   </td>
+                <td class="tg-0j0f">   <br>Mixed Sweat at Blow Me Down  <em>(see <a style="color: #000;" href="images/sweat.JPG">here</a> for participation guidelines) </em>  </td>
               </tr>
             </tbody></table>
 
@@ -331,7 +331,7 @@ a:hover {
               <div class="content">
                   <span>SCHEDULE</span>
                   <p>
-                    <a style="color: #000;" href="images/mawiomiprogram.jpg">Download or print the schedule </a>                </p>
+                    <a style="color: #000;" href="images/program.png">Download or print the schedule </a>                </p>
               </div>
           </div>
           <div class="container container-left">
