--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@ a:hover {
                 <td class="tg-0j0f">   <br>BBQ lunch   </td>
               </tr>
               <tr>
+                <td class="tg-0j0f">   <br>1:00PM-1:30PM                   </td>
+                <td class="tg-0j0f">   <br>Medicine Talk with Newfoundland Naturals   </td>
+              </tr>
+              <tr>
                 <td class="tg-0j0f">   <br>1:00PM-3:00PM                    </td>
                 <td class="tg-0j0f">   <br>Youth Activities (in AS2036):  <br>
                  <br>  &#8226 Book Reading with Mi’kmaw Youth Hosted by Mira Buckle and Madison Bartlett: <em> Building Connections Through Mi’kmaw Youth Stories </em>
@@ -189,11 +193,12 @@ a:hover {
                 <br><br> Featuring Elder Calvin White and Jerry Wetzell</td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>3:00PM-4:00PM                   </td>
-                <td class="tg-0j0f">   <br>Medicine Walk with Newfoundland Naturals   </td>
+                <td class="tg-0j0f">   <br>3:00PM-4:15PM                    </td>
+                <td class="tg-0j0f">   <br>Film Viewing: <em>‘Forgotten Warriors’  </em> (in AS2026)
+                <br><br> Featuring Director Noel Joe</td>
               </tr>
               <tr>
-                <td class="tg-0j0f">   <br>4:00PM                     </td>
+                <td class="tg-0j0f">   <br>4:15PM                     </td>
                 <td class="tg-0j0f">   <br>Closing   </td>
               </tr>
               <tr>
