--- a/venue.html
+++ b/venue.html
@@ -71,7 +71,7 @@ a.one:hover {color: #ff0d00;text-decoration: underline;}
                     <br>
                     <h4 > Saturday, August 10: </h4>
                     <br>
-                    <p> All events on August 10 (with the exception of the sweat) will be held at <a class="one" href="https://maps.app.goo.gl/L4f22GAEeYb1WoC1A"> Grenfell Campus</a>. Grenfell Campus is located at 20 University Drive in Corner Brook, NL. Events will take place in the Arts and Science Atrium, and lunch will be served in the Grove. Free parking is available on-site.</p>
+                    <p> All events on August 10 (with the exception of the sweat) will be held at <a class="one" href="https://maps.app.goo.gl/L4f22GAEeYb1WoC1A"> Grenfell Campus</a>. Grenfell Campus is located at 20 University Drive in Corner Brook, NL. Events will take place in the Arts and Science Atrium, and lunch will be served in the Grove. Free parking is available on-site in lots P2, P8, and P4 as well as the Arts and Science Circle.</p>
 
                     <br> 
                     The sweat will be held at the Blow Me Down Cross Country Ski Club.
